--- a/generate-snake-game.yml
+++ b/generate-snake-game.yml
@@ -13,17 +13,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout the repository
         uses: actions/checkout@v3
 
+      # Step 2: Generate the Snake Game SVG
       - name: Generate Snake Game
         uses: Platane/snk@v2
         with:
-          github_user_name: <your-username>
-          output: github-contribution-grid-snake.svg
+          github_user_name: <your-username> # Replace with your GitHub username
+          output: dist/github-contribution-grid-snake.svg
 
+      # Step 3: Push the updated SVG to the output branch
       - name: Push the updated Snake Game
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./output
+          publish_branch: output
+          publish_dir: ./dist
