--- a/generate-snake-game.yml
+++ b/generate-snake-game.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Generate Snake Game
         uses: Platane/snk@v2
         with:
-          github_user_name: <your-username> # Replace with your GitHub username
+          github_user_name: Skyweaver11 # Replace with your GitHub username
           output: dist/github-contribution-grid-snake.svg
 
       # Step 3: Push the updated SVG to the output branch
